--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: pszleper < pszleper@student.42.fr >        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/09 16:09:59 by pszleper          #+#    #+#              #
-#    Updated: 2023/04/15 02:16:58 by pszleper         ###   ########.fr        #
+#    Updated: 2023/04/15 04:25:57 by pszleper         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,17 +14,19 @@ COMPILATION = c++ -Wall -Wextra -Werror -std=c++98
 
 SRC = Account.cpp tests.cpp
 
+OBJ = $(SRC:.cpp=.o)
+
 HEADER = Account.hpp
 
 NAME = tests
 
 all: $(NAME)
 
-$(NAME): $(SRC) $(HEADER)
-	$(COMPILATION) $(SRC) -o $(NAME)
+$(NAME): $(OBJ) $(HEADER)
+	$(COMPILATION) $(OBJ) -o $(NAME)
 
-%.o: %.cpp
-	$(COMPILATION) $(SRC) -c -o $@
+%.o: %.cpp $(HEADER)
+	$(COMPILATION) $< -c -o $@
 
 clean:
 	rm -f *.o
