WIP on ex01 before push to github

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,23 +6,27 @@
 #    By: pszleper < pszleper@student.42.fr >        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/09 16:09:59 by pszleper          #+#    #+#              #
-#    Updated: 2023/04/15 01:27:14 by pszleper         ###   ########.fr        #
+#    Updated: 2023/04/18 03:42:06 by pszleper         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 COMPILATION = c++ -Wall -Wextra -Werror -std=c++98
 
-SRC = megaphone.cpp
+SRC = Contact.cpp Phonebook.cpp main.cpp
 
-NAME = megaphone
+OBJ = $(SRC:.cpp=.o)
+
+HEADER = Phonebook.hpp Contact.hpp
+
+NAME = ./Phonebook
 
 all: $(NAME)
 
-$(NAME): megaphone.o
+$(NAME): $(OBJ)
 	$(COMPILATION) $^ -o $(NAME)
 
-megaphone.o: megaphone.cpp
-	$(COMPILATION) $(SRC) -c -o $@
+%.o: %.cpp
+	$(COMPILATION) $^ -c -o $@
 
 clean:
 	rm -f *.o
